--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -1,34 +1,38 @@
 <!DOCTYPE html>
-<title>{{ site.title }}{% if page.title %} {{ page.title }}{% endif %}</title>
+<html lang="en">
+<head>
+	<title>{{ site.title }}{% if page.title %} {{ page.title }}{% endif %}</title>
 
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	<!-- Required meta tags -->
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- CSS -->
-<!-- Datepicker -->
-<link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.css"
-	integrity="sha256-zozDkxLZ4hXQxKEFI8DTVkwNRd0J2KW0LxrN+/2RJVQ="
-	crossorigin="anonymous" />
+	<!-- CSS -->
+	<!-- Datepicker -->
+	<link rel="stylesheet"
+		href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.css"
+		integrity="sha256-zozDkxLZ4hXQxKEFI8DTVkwNRd0J2KW0LxrN+/2RJVQ="
+		crossorigin="anonymous" />
 
-<link rel="stylesheet" href="/assets/css/{{ theme }}.css">
+	<link rel="stylesheet" href="/assets/css/{{ theme }}.css">
 
-<!-- Javascripts CDN -->
-<!-- jQuery -->
-<script
-	src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-<!-- Popper.js -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
-<!-- Bootstrap -->
-<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
-<!-- Lz-Sting -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
-<!-- LZString.compressToBase64(JSON.stringify(schema)) -->
-<!-- Datepicker -->
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.js"></script>
+	<!-- Javascripts CDN -->
+	<!-- jQuery -->
+	<script
+		src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+	<!-- Popper.js -->
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+	<!-- Bootstrap -->
+	<script	src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js"></script>
+	<!-- Lz-Sting -->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lz-string/1.4.4/lz-string.js"></script>
+	<!-- LZString.compressToBase64(JSON.stringify(schema)) -->
+	<!-- Datepicker -->
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.4/datepicker.js"></script>
 
-<!-- any-theme.js is deferred -->
-<script src="/assets/js/any-theme.js" defer></script>
+	<!-- any-theme.js is deferred -->
+	<script src="/assets/js/any-theme.js" defer></script>
+</head>
+<body>
