--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
-{% include page/init.html %}
+{%- include page/init.html -%}
 {% include page/head.html %}
 {% include page/top.html %}
 {% include page/main.html %}
 {% include page/footer.html %}
 {% include components/login.html %}
 {% include components/page_info.html %}
+{% include page/end.html %}
