--- a/_includes/page/footer.html
+++ b/_includes/page/footer.html
@@ -9,7 +9,7 @@
 			<div class="collapse navbar-collapse" id="navbarFooter">
 				<ul class="navbar-nav mr-auto">
 					<li class="nav-item">
-						<a class="nav-link" href="{{ site.github.url }}">GitHub</a>
+						<a class="nav-link" href="#">GitHub</a>
 					</li>
 					<li class="nav-item">
 						<a class="nav-link" href="Page info">Page info</a>
