jekyll build --profile cut seconds

--- a/_includes/components/alert.html
+++ b/_includes/components/alert.html
@@ -3,5 +3,5 @@ Render an alert. Inputs are `type` (primary, dark, ...), `markdown` (the content
 {% endcapture %}
 {%- include api/save.html -%}
 <div class="alert{% if include.type %} alert-{{ include.type }}{% endif %}" role="alert">
-{{ include.markdown | markdownify | replace: "<p>", "" | replace: "</p>", "" }}
+{{ include.body }}
 </div>
