Checking inversion BW > WB
Description preview, check.

--- a/_includes/components/blockquote.html
+++ b/_includes/components/blockquote.html
@@ -1,4 +1,4 @@
 <blockquote class="blockquote">
   {{ include.text | markdownify }}
-  <footer>{{ include.author }} <cite title="{{ include.source }}">{{ include.source }}</cite></footer>
+  <footer>{{ include.author }} <cite title="{{ include.source }}">&ldquo;{{ include.source }}&rdquo;</cite></footer>
 </blockquote>
