--- a/assets/css/any-theme.sass
+++ b/assets/css/any-theme.sass
@@ -23,7 +23,7 @@ $dropdown-link-hover-bg: $gray-900
 // FONTS
 
 // Font size
-$font-size-base: 19px
+$font-size-base: 1.1rem
 
 // Base font family
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500")
@@ -201,6 +201,7 @@ pre.highlight
   border-radius: $border-radius
   code
     padding: unset
+    background-color: transparent 
 
 // CARDS
 // Remove top margins for `last-of-type` objects
