--- a/assets/css/dark.sass
+++ b/assets/css/dark.sass
@@ -249,6 +249,10 @@ pre.highlight
     @extend .mb-0
   .card-title:first-of-type
     @extend .mt-0
+  ul
+    @extend .list-group, .list-group-flush
+    li
+      @extend .list-group-item
 
 // BLOCKQUOTES
 .blockquote
