Theme Switcher working. Over 8 secs

--- a/_includes/load/theme.html
+++ b/_includes/load/theme.html
@@ -2,6 +2,8 @@
   {%- assign theme = collection.theme -%}
 {%- elsif page.theme -%}
   {%- assign theme = page.theme -%}
+{%- elsif site.theme -%}
+  {%- assign theme = site.theme -%}
 {%- else -%}
-  {%- assign theme = 'any-theme' -%}
+  {%- assign theme = 'basic_light_sans' -%}
 {%- endif -%}
