--- a/_includes/page/init.html
+++ b/_includes/page/init.html
@@ -5,3 +5,4 @@ Load page's `collection`, `fluid` liquid variabiles and `theme`. Are checked in 
 {%- include load/collection.html -%}
 {%- include load/fluid.html -%}
 {%- include load/theme.html -%}
+{%- include load/sidebar.html -%}
