--- a/_includes/components/bootstrap.html
+++ b/_includes/components/bootstrap.html
@@ -1,12 +1,11 @@
-# {{ page.title }} / {{ page.theme }}
+{%- include page/init.html -%}
+# {% include filters/unslug.html string=theme %}
+<div class="float-right">
 
+{%- include widgets/themes.html -%}
+
+</div>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-<!--column-->
-
-{% include components/card.html title="Card title" header="Card header" body="Card text" footer="Card footer" %}
-
-<!--row-->
 
 # Table of contents
 
