--- a/_includes/components/page_info.html
+++ b/_includes/components/page_info.html
@@ -25,7 +25,7 @@
         </tr>
         <tr>
           <td>Theme</td>
-          <td><code>{{ theme }}</code></td>
+          <td><code id="theme-value">{{ theme }}</code></td>
         </tr>
         <tr>
           <td>Fluid</td>
@@ -35,6 +35,6 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
-    </form>
+    </div>
   </div>
 </div>
