--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>{{ site.title }}{% if page.title %} {{ page.title }}{% endif %}</title>
+	<title>{{ site.title }}{% if page.title %} | {{ page.title }}{% endif %}</title>
 
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
@@ -14,7 +14,7 @@
 		integrity="sha256-zozDkxLZ4hXQxKEFI8DTVkwNRd0J2KW0LxrN+/2RJVQ="
 		crossorigin="anonymous" />
 
-	<link rel="stylesheet" href="/assets/css/{{ theme }}.css">
+	<link rel="stylesheet" href="/assets/css/{{ theme }}.css" id="main-css">
 
 	<!-- Javascripts CDN -->
 	<!-- jQuery -->
