Themes ok, with 1 css build is 1.6 secs

--- a/_includes/components/alert.html
+++ b/_includes/components/alert.html
@@ -1,7 +1,7 @@
-{% capture api %}
+{%- capture api -%}
 Render an alert. Inputs are `type` (primary, dark, ...), `markdown` (the content).
-{% endcapture %}
+{%- endcapture -%}
 {%- include api/save.html -%}
 <div class="alert{% if include.type %} alert-{{ include.type }}{% endif %}" role="alert">
-{{ include.body }}
+{{ include.body | markdownify | remove: '<p>' |remove: '</p>' }}
 </div>
