--- a/assets/css_no/basic_light_serif.sass
+++ b/assets/css_no/basic_light_serif.sass
@@ -32,11 +32,12 @@ $code-font-size: 80%
 // Font family
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif
 $font-family-serif: Georgia, Times, "Times New Roman", serif
+$font-family-base: $font-family-serif
 // $font-family-headings-header: $font-family-serif
 
 // Weights
 // $font-weight-base: 300
-$headings-font-weight: 400
+// $headings-font-weight: 400
 
 @import "any_theme"
 @import "any_theme/syntax_default"
