--- a/assets/css_no/gurps.sass
+++ b/assets/css_no/gurps.sass
@@ -31,12 +31,14 @@ $code-font-size: 80%
 
 // Font family
 $font-family-sans-serif: "Helvetica Neue", Helvetica, Arial, sans-serif
-$font-family-serif: Georgia, Times, "Times New Roman", serif
+@import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,500,600,700')
+$font-family-serif: 'EB Garamond', serif
+$font-family-base: $font-family-serif
 // $font-family-headings-header: $font-family-serif
 
 // Weights
 // $font-weight-base: 300
-$headings-font-weight: 400
+// $headings-font-weight: 400
 
 @import "any_theme"
 @import "any_theme/syntax_default"
