--- a/_includes/components/bootstrap.html
+++ b/_includes/components/bootstrap.html
@@ -7,7 +7,7 @@
 </div>
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
-# Buttons
+## Buttons
 
 ```html
 <button type="button" class="btn btn-primary">Primary</button>
@@ -33,7 +33,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 
 <button type="button" class="btn btn-link">Link</button>
 
-# Alerts
+## Alerts
 
 {% assign alert_colors = site.emptyArray
   | push: "primary"
@@ -49,7 +49,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
   {%- include components/alert.html body=body type=alert_color -%}
 {%- endfor -%}
 
-# Badges
+## Badges
 
 ```html
 <span class="badge badge-primary">Primary</span>
@@ -71,7 +71,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 <span class="badge badge-light">Light</span>
 <span class="badge badge-dark">Dark</span>
 
-# Table of contents
+## Table of contents
 
 ```liquid
 {% raw %}{% include components/toc.html collapse=true title="Components" %}{% endraw %}
