--- a/_includes/components/bootstrap.html
+++ b/_includes/components/bootstrap.html
@@ -5,7 +5,7 @@
 {%- include widgets/themes.html -%}
 
 </div>
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+<b>Lorem ipsum dolor sit amet,</b> consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 ## Buttons
 
@@ -209,7 +209,10 @@ HTML:
 
 Render:
 
-{% include components/blockquote.html text="Lo spettro dello squillo di una tromba" author="Philip Josè Farmer" source="Fabbricante di universi" %}
+{%- assign quote = site.data.citations | sample -%}
+{%- assign source = quote.sources | sample -%}
+{% assign citation = source.citations | sample %}
+{% include components/blockquote.html text=citation.text author=quote.author source=source.title %}
 
 # Tables
 
