--- a/_includes/widgets/themes.html
+++ b/_includes/widgets/themes.html
@@ -2,10 +2,10 @@
   <div class="card-header">
     <strong>Themes switcher</strong>
   </div>
-  <ul class="list-group list-group-flush">
+  <div class="list-group list-group-flush">
     {%- for t in page.themes -%}
     {%- assign t_slug = t | slugify | replace: '-', '_' -%}
     <a href="#" class="list-group-item list-group-item-action{% if t_slug == theme %} active{% endif %}" data-theme="{{ t_slug }}">{{ t }}</a>
     {%- endfor -%}
-  </ul>
+  </div>
 </div>
