--- a/_includes/components/toc.html
+++ b/_includes/components/toc.html
@@ -2,13 +2,12 @@
 <div id="toc-accordion" role="tablist">
 	<div class="card">
 		<div class="card-header" role="tab" id="toc-headingOne">
-		<p class="mb-0">
-		<a data-toggle="collapse" href="#toc-collapseOne" aria-expanded="false" aria-controls="toc-collapseOne">{{ title }}</a>
-		</p>
+			<p class="mb-0">
+				<a data-toggle="collapse" href="#toc-collapseOne" aria-expanded="false" aria-controls="toc-collapseOne">{{ title }}</a>
+			</p>
 		</div>
 		<div id="toc-collapseOne" class="collapse " role="tabpanel" aria-labelledby="toc-headingOne" data-parent="#toc-accordion">
-			<div class="card-body">
-			</div>
+			<div></div>
 		</div>
 	</div>
 </div>
