--- a/_includes/page/head.html
+++ b/_includes/page/head.html
@@ -14,6 +14,7 @@
 		integrity="sha256-zozDkxLZ4hXQxKEFI8DTVkwNRd0J2KW0LxrN+/2RJVQ="
 		crossorigin="anonymous" />
 
+	<link rel="stylesheet" href="/assets/css/fonts/readmill-scala/fonts.css">
 	<link rel="stylesheet" href="/assets/css/{{ theme }}.css" id="main-css">
 
 	<!-- Javascripts CDN -->
