--- a/_includes/page/navbar.html
+++ b/_includes/page/navbar.html
@@ -1,3 +1,4 @@
+{%- assign navigation = include.nav | default: site.navbar -%}
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
 	<div class="container{{ fluid }}">
@@ -7,7 +8,7 @@
 
 		<div class="collapse navbar-collapse" id="navbarHeader">
 			<ul class="navbar-nav mr-auto">
-				{%- for nav in site.data.navbar.left -%}
+				{%- for nav in navigation.left -%}
 					{%- if nav.first == nil -%}
 						{% assign link = site.pages | where:'title', nav | default: [url: nav] %}
 						{% include components/navbar_link.html %}
@@ -31,7 +32,7 @@
 				{%- endfor -%}
 			</ul>
 			<ul class="navbar-nav my-lg-0">
-				{% for nav in site.data.navbar.right %}
+				{% for nav in navigation.right %}
 				{%- assign link = site.pages | where:'title', nav -%}
 				{% include components/navbar_link.html %}
 				{% endfor %}
