--- a/_includes/page/top.html
+++ b/_includes/page/top.html
@@ -1,7 +1,7 @@
 {%- if page.navbar == 'top' or collection.navbar == 'top' -%}
-  {% include page/navbar.html %}
+  {% include page/navbar.html nav=site.data.navbar %}
 {%- endif -%}
 {% include page/header.html %}
 {%- if page.navbar == 'bottom' or collection.navbar == 'bottom' -%}
-  {% include page/navbar.html %}
+  {% include page/navbar.html nav=site.data.navbar %}
 {%- endif -%}
