--- a/_sass/any_theme/_mixins.sass
+++ b/_sass/any_theme/_mixins.sass
@@ -4,3 +4,12 @@
   @for $i from $from through $to
     #{$prescope}h#{$i}#{$condition}, #{$prescope}.h#{$i}#{$condition}
       @content
+
+// Reset bottom margin of :last-og-type in cards and modals
+@mixin no-last-bottom()
+  p,
+  ul,
+  pre,
+  table
+    &:last-of-type
+      @extend .mb-0
