--- a/assets/css/dnd.sass
+++ b/assets/css/dnd.sass
@@ -16,7 +16,8 @@
 // $body-color: darken(white,5%)
 
 $maroon: maroon
-$gold: darkgoldenrod
+$gold: chocolate
+$khaki: rgba(darkkhaki,.5)
 
 // Links
 $link-color: $maroon
@@ -37,7 +38,8 @@ $cyan:    mix(#17a2b8,$maroon,55%)
 // BACKGROUND
 .dnd-background
   background-image: url('/assets/images/dnd-bg.jpg')
-  background-size: contain
+  background-size: 100% auto
+  background-position: top left
   background-color: transparent
 
 // Kbd
@@ -51,7 +53,7 @@ $font-size-base: 1.2rem
 $code-font-size: 80%
 
 // Font family
-@import_relative "fonts/readmill-scala/fonts"
+// @import "fonts/readmill-scala/fonts"
 $font-family-sans-serif: 'Scala Sans SC', sans-serif
 $font-family-serif: 'Scala', serif
 $font-family-base: $font-family-serif
@@ -62,28 +64,43 @@ $headings-color: $maroon
 // $font-weight-base: 300
 $headings-font-weight: 400
 
+// BORDERS
+$card-border-radius: 0
+$dropdown-border-radius: 0
+
 // BLOCKQUOTES
 $blockquote-small-color: lighten(black,30%)
+$text-muted: lighten(black,40%)
+
+// CODE
+$code-color: brown
 
 // CARDS
-$card-bg: rgba(white, .3)
-$card-cap-bg: rgba(black, .03)
+$card-bg: $khaki
+$card-cap-bg: darkkhaki
+$card-border-width: none
 
 // FORMS
 $custom-select-bg: rgba(white,.5)
 $input-bg: rgba(white,.5)
 
 // LISTS
-$list-group-bg: rgba(white, .5)
+$list-group-bg: rgba(white, .1)
 $list-group-action-color: rgba(black,.8)
 $component-active-bg: $maroon
 
 // TABLES
-$table-bg: rgba(white, .3)
+$table-bg: rgba(white, .2)
 $table-border-color: rgba(black,.05)
+$table-accent-bg: $khaki
 
 // MODALS
 $modal-header-border-color: rgba(black,.2)
+
+// DROPDOWNS
+$dropdown-bg: rgba(white,.4)
+$dropdown-link-hover-bg: rgba(white,.5)
+$dropdown-padding-y: 0
 
 @import "any_theme"
 @import "any_theme/syntax_blood"
@@ -94,14 +111,18 @@ body
 
 .modal-content
   @extend .dnd-background
-  background-size: cover
 
 // HEADINGS
 @include headings()
-  font-variant-caps: petite-caps
+  font-variant-caps: small-caps
 h2
   border-bottom: 2px solid $gold
   @extend .d-flex
+
+// TYPE
+b
+  font-variant-caps: small-caps
+  font-size: 105%
 
 // HEADER
 header
@@ -132,6 +153,27 @@ main
     code
       opacity: 0.7
       color: color-yiq($value)
+
+// TABLES
+table
+  @extend .table-striped
+
+.card
+  .card-footer,
+  .card-header
+    border-width: 10px
+    border-style: solid
+  .card-footer
+    @extend .pt-0
+    border-color: transparent transparent black transparent
+  .card-header
+    @extend .pb-0
+    border-color: black transparent transparent transparent
+
+// BLOCKQUOTES
+blockquote
+  @extend .pl-3, .m-2
+  border-left: ($border-width * 3) solid $maroon
 
 // CODE HIGHLIGHT
 // Set padding and background
