--- a/_includes/components/bootstrap.html
+++ b/_includes/components/bootstrap.html
@@ -195,7 +195,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
 Usage:
 
 ```liquid
-{% raw %}{% include components/blockquote.html text="Text in markdown" author="Author name" source="Source" %}{% endraw %}
+{% raw %}{% include components/blockquote.html text="Markdown text" author="Author name" source="Source" %}{% endraw %}
 ```
 
 HTML:
