Optimizations, go with Shire

--- a/_includes/components/page_info.html
+++ b/_includes/components/page_info.html
@@ -31,6 +31,14 @@
           <td>Fluid</td>
           <td><code>{{ fluid }}</code></td>
         </tr>
+        <tr>
+          <td>Sidebar</td>
+          <td><code>{{ sidebar | inspect }}</code></td>
+        </tr>
+        <tr>
+          <td>Font-face</td>
+          <td><code>{{ font_face }}</code></td>
+        </tr>
       </table>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
